Update font family in global styles and fix overflow property in body

--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
 
 *{
   box-sizing: border-box;
+  font-family: "Poppins", "sans-serif";
 }
 
 body {
   margin: 0;
   padding: 0;
   overflow: "hidden";
-  font-family: "Poppins", sans-serif;
 }
